--- a/css/domus-optimus.css
+++ b/css/domus-optimus.css
@@ -28,9 +28,12 @@ body {
     background-color: #18D498;
     color: white;
 }
-
 .dropdown-list:first-of-type {
     margin-top: 0px;
+}
+#city-dropdown {
+    position: relative;
+    top: 2%;
 }
 
  .input-field {
